# aws_iam_client_cli

./: .env  AssumePolicyDocument.json  Cargo.toml  README.md  role_policy.json
assets/: iam_inline_policy.json  iam_inline_policy_wildcard.json  managed_iam_policy.txt
src/: iam_ops.rs  main.rs
